<resources>
    <string name="app_name">Musicplayer</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
        <string name="title_activity_splash">splash</string>

    <string name="hello_world">Hello world!</string>
        <string name="title_activity_login">Login</string>
    <string name="usrname">Username</string>
    <string name="hint1">Please enter username</string>
    <string name="password">Password</string>
    <string name="hint2">Please enter password</string>
    <string name="confpassword">Password Confirm</string>
    <string name="hint3">Please confirm password</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
        <string name="title_activity_register">register</string>
</resources>
